--- a/hello-phina/helloPhina.html
+++ b/hello-phina/helloPhina.html
@@ -15,12 +15,13 @@
   </body>
   <style type="text/css">
     body {
+      margin: 0;
       background-color: #000;
-      color: #F00;
+      height: 100vh;
     }
     canvas {
-      width: 100%;
-      height: 100%;
+      /*width: 100% !important;
+      height: 100% !important;*/
     }
   </style>
 </html>
