いろいろ更新

--- a/hello-phina/helloPhina.html
+++ b/hello-phina/helloPhina.html
@@ -20,8 +20,8 @@
       height: 100vh;
     }
     canvas {
-      /*width: 100% !important;
-      height: 100% !important;*/
+      width: 100% !important;
+      height: 100% !important;
     }
   </style>
 </html>
