--- a/mizutama/helloPhina.html
+++ b/mizutama/helloPhina.html
@@ -1,27 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
  
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     
-    <title>hello phina!!</title>
+    <title></title>
+    <meta name="description" content="${description}" />
     
-    <script src="http://cdn.rawgit.com/phi-jp/phina.js/v0.1.1/build/phina.js"></script>
-    <script src="helloPhina.js"></script>
+    <style>${style}</style>
   </head>
   <body>
+    <script src="http://cdn.rawgit.com/phi-jp/phina.js/v0.2.0/build/phina.js"></script>
+    <script src="./helloPhina.js"></script>
   </body>
-  <style type="text/css">
-    body {
-      margin: 0;
-      background-color: #000;
-      height: 100vh;
-    }
-    canvas {
-      /*width: 100% !important;
-      height: 100% !important;*/
-    }
-  </style>
 </html>
+
