--- a/premypage2/helloPhina.html
+++ b/premypage2/helloPhina.html
@@ -8,17 +8,39 @@
     
     <title></title>
     <meta name="description" content="${description}" />
+
+    <link rel="stylesheet/less" type="text/css" href="./less/index.less">
     
-    <style>
-      body {
-        margin: 0;
-      }
-    </style>
+    <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/jade/1.11.0/jade.js'></script>
+    <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/less.js/2.2.0/less.min.js'></script>
+    <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/riot/2.3.13/riot+compiler.js'></script>
+    <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.js'></script>
+    <script type="text/javascript" src='./index.js'></script>
+
+    <script type="text/javascript" src='./js/index.js'></script>
+
   </head>
   <body>
+
+    <app></app>
+
     <script src="http://cdn.rawgit.com/phi-jp/phina.js/v0.2.0/build/phina.js"></script>
     <script src="./helloPhina.js"></script>
     <canvas id='particlesCanvas'></canvas>
   </body>
 </html>
 
+<script src="./tags/app.jade" type="riot/tag" template='jade'></script>
+<script src="./tags/modals/modal-about.jade" type="riot/tag" template='jade'></script>
+<script src="./tags/modals/modal-art.jade" type="riot/tag" template='jade'></script>
+
+<script src="./tags/items/item-work-card.jade" type="riot/tag" template='jade'></script>
+<script src="./tags/atoms/atom-icon-close.jade" type="riot/tag" template='jade'></script>
+<script src="./tags/atoms/atom-modal-h2.jade" type="riot/tag" template='jade'></script>
+
+<script>
+  // マウント 
+  var tags = riot.mount('*');
+
+</script>
