--- a/premypage2/index.html
+++ b/premypage2/index.html
@@ -43,14 +43,18 @@
 <script src="./tags/overlays/overlay-choose.jade" type="riot/tag" template='jade'></script>
 
 <script src="./tags/app.jade" type="riot/tag" template='jade'></script>
+
 <script src="./tags/modals/modal-about.jade" type="riot/tag" template='jade'></script>
 <script src="./tags/modals/modal-art.jade" type="riot/tag" template='jade'></script>
 <script src="./tags/modals/modal-branding.jade" type="riot/tag" template='jade'></script>
 <script src="./tags/modals/modal-uiux.jade" type="riot/tag" template='jade'></script>
 
 <script src="./tags/items/item-work-card.jade" type="riot/tag" template='jade'></script>
+
 <script src="./tags/atoms/atom-icon-close.jade" type="riot/tag" template='jade'></script>
 <script src="./tags/atoms/atom-modal-h2.jade" type="riot/tag" template='jade'></script>
+<script src="./tags/atoms/atom-loading.jade" type="riot/tag" template='jade'></script>
+
 
 <script>
   localStorage.clear();
